adjustment for running tests in parallel