@@ -22,9 +22,15 @@
 <plugin>
   <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-surefire-plugin</artifactId>
-  <version>2.5</version>
+  <version>2.10</version>
   <configuration>
     <parallel>classes</parallel>
+    <threadCount>2</threadCount>
+<!--
+    <forkMode>once</forkMode>
+    <perCoreThreadCount>false</perCoreThreadCount>
+    <argLine>-Xms256m -Xmx1024m -XX:MaxPermSize=512m</argLine>
+-->
   </configuration>
 </plugin>
 </plugins>
